--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
     font-weight: 600;
 }
 body{
-    display: flex;
+    display: grid;
+    place-items: center;
     justify-content: center;
     align-items: center;
 
